--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -40,6 +40,17 @@
   become: yes
   file: src=/etc/nginx/sites-available/insight.litenodes.net dest=/etc/nginx/sites-enabled/insight.litenodes.net state=link
 
+
+- name: Remove the default app's symlink, if exists
+  become: yes
+  file: path=/etc/nginx/sites-enabled/default state=absent
+
+- name: Configure nginx for the insight.litenodes.net
+  become: yes
+  template: src=default.j2 dest=/etc/nginx/sites-available/default group=www-data owner=www-data force=yes
+
 - name: Restart nginx
   become: yes
   action: service name=nginx state=restarted
+
+
